# calculator

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README  calculator.cpp  conanfile.txt
.github/: README
.github/workflows/: build_cmake.yml
include/: coulomb.h  enums.h  geometry.h  iforce.h  lennardjones.h  particle.h
src/: coulomb.cpp  geometry.cpp  lennardjones.cpp  particle.cpp
tests/: CMakeLists.txt
